--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
-    "firebase": "^10.13.2"
+    "firebase": "^10.13.2",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
