--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,25 @@ jobs:
       - name: Install dependencies
         run: npm install
       
+      - name: Verify environment variables
+        env:
+          VITE_FIREBASE_API_KEY: ${{ secrets.SS_NCTR_VITE_FIREBASE_API_KEY }}
+          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.SS_NCTR_VITE_FIREBASE_AUTH_DOMAIN }}
+          VITE_FIREBASE_PROJECT_ID: ${{ secrets.SS_NCTR_VITE_FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.SS_NCTR_VITE_FIREBASE_STORAGE_BUCKET }}
+          VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.SS_NCTR_VITE_FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_FIREBASE_APP_ID: ${{ secrets.SS_NCTR_VITE_FIREBASE_APP_ID }}
+          VITE_FIREBASE_MEASUREMENT_ID: ${{ secrets.SS_NCTR_VITE_FIREBASE_MEASUREMENT_ID }}
+          VITE_ADMIN_EMAILS: ${{ secrets.SS_NCTR_VITE_ADMIN_EMAILS }}
+        run: |
+          echo "Checking environment variables..."
+          if [ -z "$VITE_FIREBASE_API_KEY" ]; then echo "ERROR: VITE_FIREBASE_API_KEY is not set"; exit 1; fi
+          if [ -z "$VITE_FIREBASE_AUTH_DOMAIN" ]; then echo "ERROR: VITE_FIREBASE_AUTH_DOMAIN is not set"; exit 1; fi
+          if [ -z "$VITE_FIREBASE_PROJECT_ID" ]; then echo "ERROR: VITE_FIREBASE_PROJECT_ID is not set"; exit 1; fi
+          if [ -z "$VITE_FIREBASE_STORAGE_BUCKET" ]; then echo "ERROR: VITE_FIREBASE_STORAGE_BUCKET is not set"; exit 1; fi
+          if [ -z "$VITE_FIREBASE_APP_ID" ]; then echo "ERROR: VITE_FIREBASE_APP_ID is not set"; exit 1; fi
+          echo "✓ All required environment variables are set"
+      
       - name: Build
         env:
           VITE_FIREBASE_API_KEY: ${{ secrets.SS_NCTR_VITE_FIREBASE_API_KEY }}
